chore: replace lodash with es-toolkit
es-toolkit is a modern lodash alternative that claims to be much faster and lighter, potentially improving Yarn overall performance: https://es-toolkit.slash.page/intro.html

--- a/packages/docusaurus/package.json
+++ b/packages/docusaurus/package.json
@@ -35,13 +35,13 @@
     "clsx": "^1.2.1",
     "docusaurus-plugin-typedoc-api": "patch:docusaurus-plugin-typedoc-api@npm%3A4.2.0#~/.yarn/patches/docusaurus-plugin-typedoc-api-npm-4.2.0-fb78ec678c.patch",
     "dompurify": "^3.0.5",
+    "es-toolkit": "^1.19.0",
     "esast-util-from-js": "^2.0.1",
     "esbuild-loader": "^2.20.0",
     "fast-glob": "^3.2.2",
     "git-url-parse": "^13.1.0",
     "github-markdown-css": "^5.1.0",
     "jiti": "^1.21.0",
-    "lodash": "^4.17.15",
     "markdown-it": "^13.0.1",
     "markdown-it-br": "^1.0.0",
     "marked": "^5.1.1",
@@ -83,7 +83,6 @@
     "@docusaurus/types": "^3.4.0",
     "@types/dompurify": "^3",
     "@types/git-url-parse": "^9.0.0",
-    "@types/lodash": "^4.14.136",
     "@types/markdown-it": "^12.2.3",
     "@types/marked": "^5.0.0",
     "@types/mdast": "^4.0.3",
